Remove ExampleTest.java and refactor StudentGradesFileReaderTest.java
Signed-off-by: Mostafa Kamal <mostafakamaleed@gmail.com>